# Resume-Analyzer-Studio

./: .env.example  .gitignore  ARCHITECTURE_RESUME_ANALYZER.md  Dockerfile  Makefile  PROJECT_MASTER_DOCUMENTATION.md  Procfile  README.md  RESUME_ANALYZER_GUIDE.md  pyproject.toml  render.yaml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml  render-deploy.yml
api/: index.py
data/: skills_taxonomy.json
src/ai_agent_system/: config.py  main.py
src/ai_agent_system/agents/: nodes.py  orchestrator.py  state.py
src/ai_agent_system/evals/: harness.py
src/ai_agent_system/guardrails/: policy.py
src/ai_agent_system/memory/: store.py
src/ai_agent_system/observability/: tracing.py
src/ai_agent_system/rag/: retriever.py
src/ai_agent_system/tools/: registry.py
src/resume_analyzer/: models.py  sample_run.py
src/resume_analyzer/agents/: langgraph_flow.py  nodes.py  orchestrator.py  state.py
src/resume_analyzer/evals/: __init__.py  dataset.py  harness.py  metrics.py  rubric.py
src/resume_analyzer/guardrails/: confidence.py  fairness.py  fallbacks.py  grounding.py  input_quality.py  language_policy.py  reliability.py  sensitive_advice.py
src/resume_analyzer/memory/: resume_store.py  session_memory.py
src/resume_analyzer/observability/: logger.py
src/resume_analyzer/rag/: knowledge_base.py  vector_store.py
src/resume_analyzer/services/: target_match_service.py
src/resume_analyzer/tools/: ats_scorer.py  (+8 more)
tests/: test_health.py  test_job_matching.py  test_orchestrator.py  test_resume_analyzer.py  test_resume_tools.py
(+4 files in other folders)
